NR 알고리즘 구현 중
combine 알고리즘은 구현 완료, 하지만 테스트 필요

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SRC_FILES
     NR.cpp
     )
 
-add_compile_options(-g -ggdb)
+add_compile_options(-g -ggdb -std=c++17)
 set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 
