2개 thread에서 무한 루프 reader가 empty를 만나면 return하게 만들어야 할 듯

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRC_FILES
     )
 
 add_compile_options(-g -ggdb -std=c++17)
+link_libraries(pthread tcmalloc)
 set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 
